Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64138

Particle System Application stops responding in ~10hrs.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 5.14
    • 5.9.0, 5.9.1, 5.9.2, 5.10.0 Beta 2, 5.12.0
    • Quick: Particles

      Application enters the infinite loop.

      Valgrind shows no memory errors (leakages).

      Call stack (GDB Ubuntu x64):

      1   QHashData::allocateNode(int)                                                           0x5d5db8c  
       2   QQuickParticleDataHeap::insertTimed(QQuickParticleData *, int)                         0x1e58b8f8 
       3   QQuickParticleGroupData::recycle()                                                     0x1e58bd8f 
       4   QQuickParticleSystem::updateCurrentTime(int)                                           0x1e58f885 
       5   QAbstractAnimation::setCurrentTime(int)                                                0x5ce5b6f  
       6   QUnifiedTimer::updateAnimationTimers(long long)                                        0x5ce5e6d  
       7   QAnimationDriver::advanceAnimation(long long)                                          0x5ce6a8c  
       8   QObject::event(QEvent *)                                                               0x5f0a77b  
       9   QApplicationPrivate::notify_helper(QObject *, QEvent *)                                0x4f8d5ec  
       10  QApplication::notify(QObject *, QEvent *)                                              0x4f94a17  
       11  QCoreApplication::notifyInternal2(QObject *, QEvent *)                                 0x5edf2b8  
       12  QTimerInfoList::activateTimers()                                                       0x5f3108e  
       13  ??                                                                                     0x5f318a9  
       14  g_main_context_dispatch                                                                0xaa81197  
       15  ??                                                                                     0xaa813f0  
       16  g_main_context_iteration                                                               0xaa8149c  
       17  QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)             0x5f31baf  
       18  QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)                                0x5edd8aa  
       19  QCoreApplication::exec()                                                               0x5ee6134  
       20  main                                                                       main.cpp 24 0x400ee7   
       ... <More>                                                                                            
      

      In my and test app this infinite loop usually between

      QHashData::allocateNode(int)  and

      QQuickParticleDataHeap::insertTimed(QQuickParticleData *, int) 

      every n loops 2 more functions are called:

      QQuickParticleGroupData::recycle()

      QHashData:: detach_helper

       

      So because of this bug I cannot release my applicaion. Because I use particle system for the infinite flows visualisation.

      I have reproduced this bug in my app in all OS indicated below. I have written a simple QML app that reproduced this bug. Run it on Win7x64, Ubuntu x 64

      It stops responding in about 10hrs.

      I believe that if You uncomment setting OPENGL software mode, the app stops responding in 4 hrs.

       

       MAC OS, Win 7 x32, Win7 x64, Ubuntu x64

       

        1. main.cpp
          0.4 kB
        2. main.qml
          1 kB
        3. particle.png
          particle.png
          0.1 kB
        4. qml.qrc
          0.1 kB
        5. test_particles.pro
          1.0 kB
        6. Captura de pantalla de 2018-12-12 09-52-59.png
          Captura de pantalla de 2018-12-12 09-52-59.png
          502 kB
        7. qtbug_64138_workaround.tar.gz
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            yulong.bai Bai Yulong
            osolemio Ivan Nagorny
            Votes:
            10 Vote for this issue
            Watchers:
            20 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes